# try-copier-uv

./: README.md  copier.yaml  pyproject.toml
template/: {% if github_actions %}.github{{ _copier_conf.sep }}workflows{{ _copier_conf.sep }}ci.yaml{% endif %}.jinja  {% if license == "proprietary" %}LICENSE{% endif %}.jinja  {% if renovate %}.github{{ _copier_conf.sep }}renovate.json{% endif %}  {{ _copier_conf.answers_file }}.jinja
{{ project_name_kebab_case }}/: .pre-commit-config.yaml  .python-version.jinja  README.md.jinja  pyproject.toml.jinja  {% if containerize %}Dockerfile{% endif %}.jinja  {% if license == "BSD-3-Clause" %}LICENSE{% endif %}.jinja  {% if license == "MIT" %}LICENSE{% endif %}.jinja
{{ project_name_kebab_case }}/src/{{ project_name_kebab_case.replace('-', '_') }}/: main.py.jinja
{{ project_name_kebab_case }}/{% if testing %}tests{% endif %}/: main_test.py.jinja
