[project]
authors = [
    {name = "atloo1", email = "15357562+atloo1@users.noreply.github.com"},
]
dependencies = [
    "copier>=9.10.2",
]
description = "Python project template managed by copier, supporting automated [1] package management via uv, [2] dependency updates via Renovate, [3] testing via pytest, [4] linting via mypy & ruff, & [5] CI/CD via GitHub Actions & pre-commit"
license = "MIT"
name = "test-copier-uv"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.5"
